<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".updateprofile.UpdateProfileActivity"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"

        tools:ignore="UselessParent"
        android:layout_marginBottom="250dp">



        <TextView
            android:id="@+id/txt_update_title"
            style="@style/ActivityTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:justifyContent="space_evenly">
            <Button
                android:id="@+id/btn_update_profile_img"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                style="@style/IconButton"
                android:text="@string/btn_update_image"
                app:icon="@drawable/ic_image_white_24dp"
                android:layout_weight="1"
                android:onClick="updateProfileImageClick"/>

            <Button
                android:id="@+id/btn_update_display_name"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                style="@style/IconButton"
                android:text="@string/btn_update_display"
                app:icon="@drawable/ic_person_pin_white_24dp"
                android:layout_weight="1"
                android:onClick="updateDisplayNameClick"/>
        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:justifyContent="space_evenly">

            <Button
                android:id="@+id/btn_update_email"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                style="@style/IconButton"
                android:text="@string/btn_update_email"
                app:icon="@drawable/ic_email_white_24dp"
                android:onClick="updateEmailClick"/>

            <Button
                android:id="@+id/btn_update_password"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                style="@style/IconButton"
                android:text="@string/btn_update_password"
                app:icon="@drawable/ic_lock_white_24dp"
                android:onClick="updatePasswordClick"/>
        </com.google.android.flexbox.FlexboxLayout>

        <Button
            android:id="@+id/btn_update_back"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            style="@style/IconButton"
            app:icon='@drawable/ic_arrow_back_white_24dp'
            android:text="@string/btn_update_back"
            android:layout_gravity="center_horizontal"
            android:onClick="back">
        </Button>
    </LinearLayout>
</RelativeLayout>