<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".updateprofile.EditDisplayName">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/txt_register_title"
            style="@style/UpdateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_display" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_displayNameTextField"
            style="@style/FirebaseUI.TextInputLayout.NameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/display_name_hint"
            app:endIconMode="clear_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={user.displayName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_update_display"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_update" />

    </LinearLayout>
</RelativeLayout>